[gd_scene load_steps=2 format=3 uid="uid://cbke1yb3m7dra"]

[ext_resource type="Script" path="res://Scripts/ItemRangedEditor.gd" id="1_my1v7"]

[node name="ItemRangedEditor" type="Control" node_paths=PackedStringArray("UsedAmmoTextEdit", "UsedMagazineTextEdit", "RangeNumberBox", "SpreadNumberBox", "SwayNumberBox", "RecoilNumberBox", "UsedSkillTextEdit", "ReloadSpeedNumberBox", "FiringSpeedNumberBox", "TwoHandedCheckBox")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_my1v7")
UsedAmmoTextEdit = NodePath("Ranged/UsedAmmoTextEdit")
UsedMagazineTextEdit = NodePath("Ranged/UsedMagazineTextEdit")
RangeNumberBox = NodePath("Ranged/RangeNumber")
SpreadNumberBox = NodePath("Ranged/SpreadNumber")
SwayNumberBox = NodePath("Ranged/SwayNumber")
RecoilNumberBox = NodePath("Ranged/RecoilNumber")
UsedSkillTextEdit = NodePath("Ranged/UsedSkillTextEdit")
ReloadSpeedNumberBox = NodePath("Ranged/ReloadSpeedNumber")
FiringSpeedNumberBox = NodePath("Ranged/FiringSpeedNumber")
TwoHandedCheckBox = NodePath("Ranged/TwoHandedCheckBox")

[node name="Ranged" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
columns = 2

[node name="UsedAmmoLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Ammo"

[node name="UsedAmmoTextEdit" type="TextEdit" parent="Ranged"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
focus_next = NodePath("../UsedMagazineTextEdit")
placeholder_text = "9mm"

[node name="UsedMagazineLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Magazine"

[node name="UsedMagazineTextEdit" type="TextEdit" parent="Ranged"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.9
focus_previous = NodePath("../UsedAmmoTextEdit")
placeholder_text = "pistol_magazine"
wrap_mode = 1

[node name="RangeLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Range"

[node name="RangeNumber" type="SpinBox" parent="Ranged"]
layout_mode = 2
tooltip_text = "The width of this item in the inventory. A larger number means it will take up more horizontal inventory slots"
min_value = 100.0
max_value = 10000.0
step = 100.0
value = 1000.0

[node name="SpreadLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Spread"

[node name="SpreadNumber" type="SpinBox" parent="Ranged"]
layout_mode = 2
tooltip_text = "The height of this item in the inventory. A larger number means it will take up more vertical inventory slots"
min_value = 1.0
value = 5.0

[node name="SwayLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Sway"

[node name="SwayNumber" type="SpinBox" parent="Ranged"]
layout_mode = 2
tooltip_text = "The weight of this item in kg"
value = 5.0

[node name="RecoilLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Recoil"

[node name="RecoilNumber" type="SpinBox" parent="Ranged"]
layout_mode = 2
tooltip_text = "The amount of this item that will spawn in a stack by default"
min_value = 1.0
value = 20.0

[node name="UsedSkillLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Skill"

[node name="UsedSkillTextEdit" type="TextEdit" parent="Ranged"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.9
focus_previous = NodePath("../UsedAmmoTextEdit")
placeholder_text = "short_guns"
wrap_mode = 1

[node name="ReloadSpeedLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Reload speed"

[node name="ReloadSpeedNumber" type="SpinBox" parent="Ranged"]
layout_mode = 2
tooltip_text = "The maximum number of this item that will fit in a stack"
min_value = 0.1
step = 0.1
value = 2.5

[node name="FiringSpeedLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Firing speed"

[node name="FiringSpeedNumber" type="SpinBox" parent="Ranged"]
layout_mode = 2
tooltip_text = "The maximum number of this item that will fit in a stack"
min_value = 0.01
step = 0.01
value = 0.25

[node name="TwoHandedLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Two handed"

[node name="TwoHandedCheckBox" type="CheckBox" parent="Ranged"]
layout_mode = 2
tooltip_text = "Enable this if the ranged weapon occupies both hands. Disable this if the equipped weapon occupies one hand"
text = "Two handed"
