extends Control

# This scene is intended to be used inside the item editor
# It is supposed to edit exactly one ranged weapon


# Ranged form elements
@export var UsedAmmoTextEdit: TextEdit = null
@export var UsedMagazineTextEdit: TextEdit = null
@export var RangeNumberBox: SpinBox = null
@export var SpreadNumberBox: SpinBox = null
@export var SwayNumberBox: SpinBox = null
@export var RecoilNumberBox: SpinBox = null
@export var UsedSkillTextEdit: TextEdit = null
@export var ReloadSpeedNumberBox: SpinBox = null
@export var FiringSpeedNumberBox: SpinBox = null

